// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all options callbacks are called: 1 - history_entries 1`] = `
Array [
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/first",
    "search": "",
    "state": Object {},
    "url": "/first",
  },
  Object {
    "basename": "",
    "hash": "",
    "key": "345678",
    "pathname": "/second",
    "search": "",
    "state": Object {},
    "url": "/second",
  },
]
`;

exports[`all options callbacks are called: 1 - history_index 1`] = `1`;

exports[`all options callbacks are called: 1 - options - beforeEnter 1`] = `2`;

exports[`all options callbacks are called: 1 - options - beforeLeave 1`] = `2`;

exports[`all options callbacks are called: 1 - options - onComplete 1`] = `2`;

exports[`all options callbacks are called: 1 - options - onEnter 1`] = `2`;

exports[`all options callbacks are called: 1 - options - onError 1`] = `1`;

exports[`all options callbacks are called: 1 - options - onLeave 1`] = `2`;

exports[`all options callbacks are called: 1 - options - thunk 1`] = `2`;

exports[`all options callbacks are called: 1 - response 1`] = `undefined`;

exports[`all options callbacks are called: 1 - routes - NEVER_USED_PATHLESS - thunk 1`] = `0`;

exports[`all options callbacks are called: 1 - routes - REDIRECTED - onComplete 1`] = `0`;

exports[`all options callbacks are called: 1 - state 1`] = `
Object {
  "location": Object {
    "basename": "",
    "direction": "forward",
    "entries": Array [
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/first",
        "search": "",
        "state": Object {},
        "url": "/first",
      },
      Object {
        "basename": "",
        "hash": "",
        "key": "345678",
        "pathname": "/second",
        "search": "",
        "state": Object {},
        "url": "/second",
      },
    ],
    "from": null,
    "hasSSR": false,
    "hash": "",
    "index": 1,
    "kind": "push",
    "length": 2,
    "params": Object {},
    "pathname": "/second",
    "prev": Object {
      "basename": "",
      "direction": "forward",
      "entries": Array [
        Object {
          "basename": "",
          "hash": "",
          "key": "345678",
          "pathname": "/first",
          "search": "",
          "state": Object {},
          "url": "/first",
        },
      ],
      "hash": "",
      "index": 0,
      "kind": "load",
      "length": 1,
      "params": Object {},
      "pathname": "/first",
      "query": Object {},
      "scene": "",
      "search": "",
      "state": Object {},
      "status": 200,
      "type": "FIRST",
      "url": "/first",
    },
    "query": Object {},
    "scene": "",
    "search": "",
    "state": Object {},
    "status": 200,
    "type": "SECOND",
    "url": "/second",
  },
  "title": "SECOND",
}
`;

exports[`all options callbacks are called: 1 - title 1`] = `"SECOND"`;
